<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0FFFF"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"> <!-- Light blue background color -->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/images" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="16dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="16dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:minHeight="48dp"
        android:text="@string/login" />

<!--    <TextView-->
<!--        android:id="@+id/guest_login"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:gravity="center"-->
<!--        android:minWidth="48dp"-->
<!--        android:minHeight="48dp"-->
<!--        android:onClick="onGuestLoginClick"-->
<!--        android:padding="8dp"-->
<!--        android:text="@string/login_guest"-->
<!--        android:textColor="@android:color/black"-->
<!--        android:textStyle="bold" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/dont_have_account"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="onRegisterClick"
        android:padding="8dp"
        android:text="@string/register"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="onRecoveryClick"
        android:padding="8dp"
        android:text="@string/recovery"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />
</LinearLayout>